--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -11,8 +11,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    hibernate:
-      ddl-auto: create
+        ddl-auto: update
   h2:
     console:
       path: /h2-console
