--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,4 +4,9 @@ spring:
   profiles:
     active: test
 server:
-  port: 8081
+  port: 8082
+file:
+  uploadDir: uploads
+springdoc:
+  swagger-ui:
+    path: /swagger-doc
