--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,25 +1,19 @@
-## conexão com banco de dados real
-## banco de dados postgres
 spring:
   datasource:
-    url: jdbc:postgresql://${HOST}:${PORT}/${DATABASE_NAME}?sslmode=require
-    username: ${USERNAME}
-    password: ${PASSWORD}
     driver-class-name: org.postgresql.Driver
+    url: ${JDBURLCONNECTION}
+    username: ${PGUSER}
+    password: ${PGPASSWORD}
     hikari:
-      maximum-pool-size: 10
-      connection-timeout: 5000
-      idle-timeout: 30000
-      max-lifetime: 60000
+      maximum-pool-size: 5
+      minimum-idle: 1
 
   jpa:
+    show-sql: true
     hibernate:
-      ddl-auto: none
-    show-sql: false
+      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-        jdbc:
-          lob:
-            non_contextual_creation: true
+        ddl-auto: update
+        dialect: org.hibernate.dialect.PostgreSQLDialect
