--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,13 @@ spring:
     name: ToyBackend
   profiles:
     active: production
-
 server:
   port: 8082
-
+  tomcat:
+    accesslog:
+      enabled: true
 file:
   uploadDir: uploads
-
 springdoc:
   swagger-ui:
     path: /swagger-doc
