--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: ToyBackend
   profiles:
-    active: production
+    active: develop
 server:
   port: 8082
   tomcat:
